--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,35 +8,35 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #757575;
+  background: #138cc2;
 }
 
 .header {
-  position: absolute;
-  width: 244px;
-  height: 71px;
-  left: 352px;
-  top: 89px;
+  margin-top: 100px;
+  width: 240px;
+  height: 40px;
+  left: 300px;
   
   font-family: Open Sans;
   font-style: normal;
   font-weight: 600;
-  font-size: 44px;
+  font-size: 50px;
   line-height: 64px; 
   
   display: flex;
+  justify-content: center;
   align-items: center;
+
+
   
-  color: #5f5c5c; 
+  color: #0b161b;
 &__textaera {
-  position: absolute;
-  margin-top: 10px;
-  width: 550px;
+  width: 500px;
   height: 317px;
   left: 352px;
   top: 180px;
 
-  background: #2f3547;
+  background: #1f1f1f;
   border: 1px solid #FFFFFF;
   box-sizing: border-box;
   padding: 15px;
@@ -47,45 +47,118 @@ font-style: normal;
 font-weight: normal;
 font-size: 14px;
 line-height: 24px;
-color: #FFFFFF;
+color: #9ee4e4;
 }
 &__button-load {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  
-  position: absolute;
+  align-items: center;
+  flex-direction: row-reverse;
+
   width: 100px;
   height: 32px;
-  left: 640px;
-  top: 522px;
+  margin-left: 400px;
   
-  background: #121232;
+  background: #1d3d4b;
   box-sizing: border-box;
   border-radius: 5px;
-  color: #fefefe;
+  color: #9ee4e4;
   font-family: Open Sans;
   font-style: normal;
   
   }
   &__button-save {
     display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   
-  position: absolute;
   width: 100px;
   height: 32px;
-  left: 800px;
-  top: 522px;
-  
-  background: #fefefe;
+  margin-top: 5px;
+  margin-left: 400px;
+  background: #9ee4e4;
   box-sizing: border-box;
   border-radius: 5px;
-  color: #121232;
+  color: #1d3d4b;
   font-family: Open Sans;
   font-style: normal;
   }
 }
+
+@media screen and (max-width: 456px) {
+
+  .header {
+    margin-top: 100px;
+    width: 240px;
+    height: 40px;
+    
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 600px;
+    font-size: 30px;
+    line-height: 64px; 
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+  
+    
+    color: #0b161b;
+  &__textaera {
+    width: 400px;
+    height: 200px;
+    margin-left: 30px;
+    top: 180px;
+  
+    background: #1f1f1f;
+    border: 1px solid #FFFFFF;
+    box-sizing: border-box;
+    padding: 15px;
+    border-radius: 10px;
+    
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 24px;
+  color: #9ee4e4;
+  }
+  &__button-load {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row-reverse;
+  
+    width: 100px;
+    height: 32px;
+    margin-left: 330px;
+    
+    background: #1d3d4b;
+    box-sizing: border-box;
+    border-radius: 5px;
+    color: #9ee4e4;
+    font-family: Open Sans;
+    font-style: normal;
+    
+    }
+    &__button-save {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+    
+    width: 100px;
+    height: 32px;
+    margin-top: 5px;
+    margin-left: 330px;
+    background: #9ee4e4;
+    box-sizing: border-box;
+    border-radius: 5px;
+    color: #1d3d4b;
+    font-family: Open Sans;
+    font-style: normal;
+    }
+  }
+}  
